--- a/app/src/main/res/layout/activity_template.xml
+++ b/app/src/main/res/layout/activity_template.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ActivityTemplate">
 
     <Button
-        android:id="@+id/BtnGoToTemplateActivity"
+        android:id="@+id/BtnGoToMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to template activity"
+        android:text="Go to Main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
