--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,15 +57,26 @@
             app:layout_constraintTop_toBottomOf="@+id/RBAnnually" />
     </RadioGroup>
 
+    <Spinner
+        android:id="@+id/planetSpinner"
+        android:layout_width="215dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:background="#CEC1E4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RGSubscription"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/BtnGoToTemplateActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to template activity"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/planetSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
