--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,9 +74,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to template activity"
-        app:layout_constraintTop_toBottomOf="@+id/planetSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/planetSpinner" />
+
+    <AutoCompleteTextView
+        android:id="@+id/ACTVBirthMonth"
+        android:layout_width="211dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:hint="Auto Complete Text View"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnGoToTemplateActivity"
+        tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
