--- a/app/src/main/res/layout/activity_template.xml
+++ b/app/src/main/res/layout/activity_template.xml
@@ -6,15 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ActivityTemplate">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RVTemplate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/individual_item_view" />
+
     <Button
         android:id="@+id/BtnGoToMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to Main"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/RVTemplate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
